--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "unified": "^8.3.2"
+    "rehype-parse": "^6.0.1",
+    "rehype-stringify": "^6.0.0",
+    "unified": "^8.3.2",
+    "unist-util-visit-parents": "^3.0.0"
   }
 }
