--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node --experimental-modules build.js"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
